typescript/checker/tests/conformance/es6/Symbols/symbolProperty3.ts.stderr
error: TS2464 {
    span: Span {
        lo: BytePos(
            45,
        ),
        hi: BytePos(
            48,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty3.ts:4:5
  |
4 |     [s]: 0,
  |     ^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            57,
        ),
        hi: BytePos(
            60,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty3.ts:5:5
  |
5 |     [s]() { },
  |     ^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            76,
        ),
        hi: BytePos(
            79,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty3.ts:6:9
  |
6 |     get [s]() {
  |         ^^^

